--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@devui-design/icons": "^1.3.0",
+    "devui-theme": "^0.0.7",
+    "lz-string": "^1.5.0",
     "vue": "^3.3.4",
+    "vue-devui": "^1.6.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -26,9 +30,13 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
+    "naive-ui": "^2.35.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
+    "unplugin-auto-import": "^0.17.1",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
   }
