--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@devui-design/icons": "^1.3.0",
     "devui-theme": "^0.0.7",
+    "json-diff": "^1.0.6",
     "lz-string": "^1.5.0",
+    "monaco-editor": "^0.52.2",
     "vue": "^3.3.4",
     "vue-devui": "^1.6.0",
     "vue-router": "^4.2.5"
