--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "devui-theme": "^0.0.7",
     "json-diff": "^1.0.6",
     "lz-string": "^1.5.0",
-    "monaco-editor": "^0.52.2",
     "vue": "^3.3.4",
     "vue-devui": "^1.6.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -33,6 +32,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "less": "^4.2.0",
+    "monaco-editor": "^0.52.2",
     "naive-ui": "^2.35.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
@@ -40,6 +40,7 @@
     "unplugin-auto-import": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vue-tsc": "^1.8.19"
   }
 }
